--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,21 @@
   margin: 0;
   padding: 0;
 }
+.App__header {
+ margin-top: 150px;
+
+  
+}
+
+.time-score {
+  width: 100%;
+  
+}
+.time-score p {
+  display: inline-block;
+  margin: 0 20px;
+
+}
 html, body{
   height: 100%;
 }
@@ -77,3 +92,53 @@ h1{
   width: 600px;
   height: 600px;
 }
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+button {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #3e8e41;
+}
+.show {
+  display: block;
+}
+
